# Mongo-RAG-MCP

./: .gitignore  README.md  Technical Spec.md  architecture-diagram.excalidraw  package-lock.json  package.json  start_mcp_server.py
mongodb_mcp_server/: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  config.py  demo.py  direct_query.py  main.py  pyproject.toml  quick_test.py  requirements.txt  setup.py  web_server.py
mongodb_mcp_server/examples/: README.md  create_vector_indexes.py  demo_mcp_agent.py  demo_mcp_contract_query.py  multi_collection_demo.py  pdf_demo.py
mongodb_mcp_server/services/: __init__.py  embeddings.py  mongodb_client.py  unstructured_client.py
mongodb_mcp_server/tests/: __init__.py  conftest.py  test_config.py  test_embeddings.py
mongodb_mcp_server/tools/: __init__.py  document_processor.py  vector_search.py
